Get one task handle  On branch master  Your branch is up to date with 'origin/master'.
 Changes to be committed:
	modified:   cmd/app/main.go
	modified:   internal/app/initapp.go
	modified:   internal/controller/http/v1/interfaces.go
	modified:   internal/controller/http/v1/task_rout.go
	modified:   internal/docs/docs.go
	modified:   internal/docs/swagger.json
	modified:   internal/docs/swagger.yaml
	modified:   internal/entity/kafka_msg.go
	modified:   internal/repository/db/task_approvers_pg_repo.go
	modified:   internal/repository/db/task_mock_repo.go
	modified:   internal/repository/db/task_pg_repo.go
	modified:   internal/repository/kafka/kafka_repo.go
	modified:   internal/usecase/in_usecase.go
	modified:   internal/usecase/interfaces.go
	modified:   internal/usecase/task_usecase.go
	modified:   internal/usecase/task_usecase_test.go
	modified:   migrations/20220717210842_init.sql
