# internal/docs/swagger.yaml
@@ -24,14 +24,7 @@ definitions:
       id:
         type: integer
     type: object
-  errors.customTaskError:
-    properties:
-      stackTrace:
-        items:
-          type: integer
-        type: array
-    type: object
-host: :3000
+host: localhost:3000
 info:
   contact:
     email: alex@mail.ru
@@ -54,6 +47,39 @@ paths:
           description: ""
       summary: accessailability task.service
   /task:
+    get:
+      description: Get one tasks
+      parameters:
+      - description: Task ID
+        format: string
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Task'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+        "503":
+          description: Service Unavailable
+          schema:
+            type: string
+      summary: get one task
     post:
       consumes:
       - application/json
@@ -61,7 +87,7 @@ paths:
       parameters:
       - description: New Task
         in: body
-        name: article
+        name: task
         required: true
         schema:
           $ref: '#/definitions/entity.Task'
@@ -79,15 +105,11 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/errors.customTaskError'
+            type: string
         "404":
           description: Not Found
           schema:
             type: string
-        "405":
-          description: Method Not Allowed
-          schema:
-            $ref: '#/definitions/errors.customTaskError'
         "500":
           description: Internal Server Error
           schema:
@@ -97,4 +119,35 @@ paths:
           schema:
             type: string
       summary: create task
+  /tasks:
+    get:
+      description: Get list of tasks
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/entity.Task'
+              type: array
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+        "503":
+          description: Service Unavailable
+          schema:
+            type: string
+      summary: list of task
 swagger: "2.0"
